--- a/index.html
+++ b/index.html
@@ -5,8 +5,55 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style type=text/css>   
+body   
+{  
+height: 125vh;  
+margin-top: 80px;  
+padding: 30px;  
+background-size: cover;  
+font-family: sans-serif;  
+}  
+header {
+position: fixed;  
+left: 0;  
+right: 0;  
+top: 5px;  
+height: 30px;  
+display: flex;  
+align-items: center;  
+}  
+header * {  
+display: inline;  
+}  
+header li {  
+margin: 20px;  
+}  
+header li a {  
+text-decoration: none;  
+}  
+</style> 
 </head>
 <body>
-    
+    <header>
+        <nav>  
+            <ul>  
+                <li style="margin-left: 300px;"><a href="#"> Products </a></li>
+                <li><a href="#"> Partners </a></li>
+                <li><a href="#"> Company </a></li>
+                <li><a href="#"> Knowledge Centre </a></li>
+                <li><a href="#"> Contact Us </a></li>
+                <li  style="margin-left: 200px;"><a href="#"> Login </a></li>
+                <li><a href="#"> Sign Up </a></li>
+            </ul>  
+        </nav>  
+    </header> 
+    <div style="height: 100px; width: 400px; margin-left: 275px; margin-top: 350px;">
+        <h1>Grow Faster, Go Global</h1>
+        <h5>Strengthen your Supply Chain, and Scale your Business with Reliable Shipping and Cashflows.</h5>
+        <button>home.get</button>
+    </div>
+    <img style="height: 500px; margin-left: 700px; margin-top: -250px;" src="https://cdn.cogoport.io/cms-prod/vault/original/home-banner-image1.webp">
+      
 </body>
 </html>
