--- a/index.html
+++ b/index.html
@@ -5,44 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style type=text/css>   
-body   
-{  
-height: 125vh;  
-margin-top: 80px;  
-padding: 30px;  
-background-size: cover;  
-font-family: sans-serif;  
-}  
-header {
-position: fixed;  
-left: 0;  
-right: 0;  
-top: 5px;  
-height: 30px;  
-display: flex;  
-align-items: center;  
-}  
-header * {  
-display: inline;  
-}  
-header li {  
-margin: 20px;  
-}  
-header li a {  
-text-decoration: none;  
-}
-.info{
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-}
-.col{
-    color: red;
-}  
-</style> 
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <div class="headerr">
     <header>
         <nav>  
             <ul>
@@ -55,16 +21,18 @@ text-decoration: none;
                 <li style="margin-left: 200px;"><a href="#"> Login </a></li>
                 <li><a href="#"> Sign Up </a></li>
             </ul>  
-        </nav>  
-    </header> 
+        </nav>
+    </header>    
     <div style="height: 100px; width: 400px; margin-left: 275px; margin-top: 150px;">
         <h1>Grow Faster, Go Global</h1>
         <h5>Strengthen your Supply Chain, and Scale your Business with Reliable Shipping and Cashflows.</h5>
         <button>home.get</button>
     </div>
     <img style="height: 500px; margin-left: 700px; margin-top: -250px;" src="https://cdn.cogoport.io/cms-prod/vault/original/home-banner-image1.webp">
+</div>
     <div class="info">
-        <span><h1 class="col">149+</h1><br/>Countries Served</span>
+        <span>
+            <h1 class="col">149+</h1><br/>Countries Served</span>
         <span><h1 class="col">8000+</h1><br/>Ports Pair Served</span>
         <span><h1 class="col">2500+</h1><br/>Tons of Air Cargo Moved</span>
         <span><h1 class="col">5000,000+</h1><br/>TEU's Sold</span>
